# tryWasmComponent

./: .gitignore  Makefile  README.md  calc.wit  compose.sh
adder/: adder-compo.wasm  adder.c  adder.h  adder.wasm  adder_impl.c
calculator/: app.py
calculator/calculator/: __init__.py
calculator/calculator/exports/: __init__.py  calculate.py
calculator/calculator/imports/: add.py
command/: Cargo.toml
command/src/: main.rs
