[package]
name = "command"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen = "0.25.0"
wit-bindgen-rt = { version = "0.25.0", features = ["bitflags"] }
anyhow = "1"
clap = { version = "4.3.19", features = ["derive"] }

[package.metadata.component]
package = "docs:calculator"

[package.metadata.component.target]
path = "../calc.wit"
world = "app"

[package.metadata.component.dependencies]
